# temp_docs_repo

./: .buildinfo  README.md  calculator.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
_sources/: calculator.rst.txt  index.rst.txt  modules.rst.txt
caluclator/: pyproject.toml  setup.py
caluclator/.github/workflows/: deploy-docs.yml
caluclator/calculator/: __init__.py  core.py  main.py
caluclator/calculator.egg-info/: PKG-INFO  SOURCES.txt
caluclator/docs/: conf.py
caluclator/docs/_build/html/: .buildinfo  genindex.html  index.html
caluclator/docs/_build/html/_sources/: index.rst.txt
caluclator/docs/source/: calculator.rst  conf.py  index.rst
caluclator/tests/: test_core.py  test_operations.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: objects.inv  search.html  searchindex.js
