[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator"
version = "0.1.0"
description = "A simple calculator library for basic arithmetic operations."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["calculator", "math", "arithmetic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License"
]

[project.urls]
Homepage = "https://github.com/yourusername/calculator"
Repository = "https://github.com/yourusername/calculator"

[tool.setuptools]
packages = ["calculator"]

[tool.setuptools.package-data]
calculator = ["py.typed"]
